Refactor OAuth handling and enhance connection management features